# Asclepion

./: .env.template  .gitignore  FRONTEND_FIXES_SUMMARY.md  LAYOUT_OPTIMIZATION_SUMMARY.md  LICENSE  PROJECT_FILES_SUMMARY.md  README.md  agent_registry_config.json  configure_llm.py  debug_mock.py  demo_llm_actor_integration.py  demo_report3_integration.py  detailed_action_test.py  env_config_example.py  hospital_simulation_complete.py  hospital_simulation_llm.py  integration_example.py  pyproject.toml  requirements.txt  reward_state_integration_test.py  setup.py  setup_llm_simulation.py  start_simulation.py  test_report3_integration.py  test_websocket_integration.py  websocket_server.py
comprehensive_export/: simulation_hospital_governance_demo_20251006_174310.json  simulation_hospital_governance_demo_20251006_174310_agent_head_nurse.csv  simulation_hospital_governance_demo_20251006_174310_agent_hospital_administrator.csv  simulation_hospital_governance_demo_20251006_174310_agent_senior_doctor.csv  simulation_hospital_governance_demo_20251006_174310_metadata.csv  simulation_hospital_governance_demo_20251006_174310_timeseries.csv  simulation_hospital_governance_demo_20251006_174335.db  simulation_hospital_governance_demo_20251006_174335.json  simulation_hospital_governance_demo_20251006_174335.pkl  simulation_hospital_governance_demo_20251006_174335_agent_head_nurse.csv  simulation_hospital_governance_demo_20251006_174335_agent_hospital_administrator.csv  simulation_hospital_governance_demo_20251006_174335_agent_senior_doctor.csv  simulation_hospital_governance_demo_20251006_174335_metadata.csv  simulation_hospital_governance_demo_20251006_174335_timeseries.csv
config/: agents_env_example.env  holy_code_rules.yaml  simulation_scenarios.yaml  system_matrices.yaml
docs/: AGENTS_MODULE_GUIDE.md  AGENTS_QUICK_START.md  AGENTS_REFACTORING_SUMMARY.md  AGENTS_USAGE_GUIDE.md  BEHAVIOR_MODELS_COMPLETION_SUMMARY.md  BEHAVIOR_MODELS_REMOVAL_SUMMARY.md  COLLABORATIVE_INTELLIGENCE_OVERVIEW.md  CONTROL_MODULE_REFACTORING_SUMMARY.md  DATA_EXPORT_COMPLETION_SUMMARY.md  EXPERIENCE_DATA_COLLECTION_GUIDE.md  FRONTEND_MONITORING_SUMMARY.md  HOLY_CODE_REFACTORING_SUMMARY.md  LLM_ACTOR_SYSTEM_GUIDE.md  MADDPG_LLM_COLLABORATION_ARCHITECTURE.md  MADDPG_TRAINING_SYSTEM_SUMMARY.md  MATHEMATICAL_VERIFICATION_REPORT.md  PROJECT_COMPLETE_SUMMARY.md  REPORT3_ARCHITECTURE_INTEGRATION.md  SIMULATOR_REFACTORING_SUMMARY.md  WEBSOCKET_INTEGRATION_SUMMARY.md  behavior_models_guide.md  report20251017.md  report_2_20251017.md  report_3_20251030.md  summary.md
examples/: behavior_models_demo.py  integration_test.py
frontend/: websocket_demo.html
src/hospital_governance/: __init__.py
src/hospital_governance/agents/: __init__.py  agent_registry.py  behavior_models.py  interaction_engine.py  learning_models.py  llm_action_generator.py  llm_providers.py  multi_agent_coordinator.py  report3_agent.py  role_agents.py  role_agents_old.py  semantic_critic.py
src/hospital_governance/control/: __init__.py  constraint_controller.py  distributed_control.py  distributed_reward_control.py  government_controller.py  observer_controller.py  patient_controller.py  primary_controller.py  reward_based_controller.py  reward_control_adapter.py  role_specific_reward_controllers.py
src/hospital_governance/core/: kallipolis_mathematical_core.py  kallipolis_mathematical_core_old.py  state_space.py  system_dynamics.py  system_matrices.py
src/hospital_governance/holy_code/: __init__.py  holy_code_manager.py  parliament.py  reference_generator.py  rule_engine.py  rule_library.py
src/hospital_governance/interfaces/: api.py  data_export.py
src/hospital_governance/performance/: metrics_calculator.py  performance_index.py  validation_metrics.py
src/hospital_governance/simulation/: __init__.py  data_logger.py  real_time_monitor.py  scenario_runner.py  simulator.py  simulator_refactored.py
src/hospital_governance/stability/: frequency_analysis.py  lyapunov_analysis.py  robustness_analysis.py
src/hospital_governance/test/: demo_holy_code_refactoring.py  test_agents_refactoring.py  test_basic_simulator.py  test_behavior_models.py.backup  test_control_simple.py  test_distributed_control_standalone.py  test_frontend.py  test_frontend_fixes.py  test_holy_code.py  test_simulator_refactored.py  test_websocket_integration.py  websocket_demo_server.py
src/hospital_governance/utils/: config_loader.py
test/: demo_data_export.py  demo_export_standalone.py  mock_parliament.py  test_collaborative_llm_system.py  test_complete_integration.py  test_comprehensive.py  test_distributed_control.py  test_holy_code_concept.py  test_holy_code_refactoring.py  test_holy_code_simple.py  test_integration copy.py  test_integration.py  test_interaction_engine_reward_integration.py  test_llm_actor_system.py  test_reward_control_fix.py  test_simulator_ppo.py  test_websocket_client.py
test_export/: simulation_test_sim_001_20251006_173825.db  simulation_test_sim_001_20251006_173825.json  simulation_test_sim_001_20251006_173825.pkl  simulation_test_sim_001_20251006_173825_agent_doctor_agent.csv  simulation_test_sim_001_20251006_173825_metadata.csv  simulation_test_sim_001_20251006_173825_timeseries.csv
